<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baby_pink" >


    <ImageView
        android:id="@+id/logoSignUp"
        android:layout_width="207dp"
        android:layout_height="199dp"
        android:contentDescription="app Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/appTitleRegister"
        android:layout_width="195dp"
        android:layout_height="42dp"
        android:fontFamily="@font/itim"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textSize="34sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoSignUp"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/RegisterForm"
        android:layout_width="317dp"
        android:layout_height="356dp"
        android:background="@drawable/rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitleRegister"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtUsernameSignUp"
        android:layout_width="295dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/RegisterForm"
        app:layout_constraintHorizontal_bias="0.419"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"
        android:backgroundTint="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/RegisterForm"
        app:layout_constraintTop_toTopOf="@+id/RegisterForm"
        app:layout_constraintVertical_bias="0.026"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtEmailSignUp"
        android:layout_width="295dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"
        android:backgroundTint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/RegisterForm"
        app:layout_constraintEnd_toEndOf="@+id/RegisterForm"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="@+id/RegisterForm"
        app:layout_constraintTop_toBottomOf="@+id/txtUsernameSignUp"
        app:layout_constraintVertical_bias="0.037"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtPwdRegister"
        android:layout_width="295dp"
        android:layout_height="53dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/RegisterForm"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"
        android:backgroundTint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/RegisterForm"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="@+id/RegisterForm"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailSignUp"
        app:layout_constraintVertical_bias="0.09"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtCfmPwdRegister"
        android:layout_width="295dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/cfmPwd"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/RegisterForm"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"
        android:backgroundTint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/RegisterForm"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="@+id/RegisterForm"
        app:layout_constraintTop_toBottomOf="@+id/txtPwdRegister"
        app:layout_constraintVertical_bias="0.132"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/ButtonStyle"
        android:layout_width="124dp"
        android:layout_height="57dp"
        android:fontFamily="@font/itim"
        android:onClick="onClick"
        android:text="@string/signUp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/RegisterForm"
        app:layout_constraintEnd_toEndOf="@+id/RegisterForm"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/RegisterForm"
        app:layout_constraintTop_toBottomOf="@+id/txtCfmPwdRegister"
        app:layout_constraintVertical_bias="0.515" />

    <TextView
        android:id="@+id/LoginFromSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/have_acc"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterForm"
        app:layout_constraintVertical_bias="0.103" />


</androidx.constraintlayout.widget.ConstraintLayout>